Enhance bug report generation with schema validation and improve prompt clarity

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
+# Model settings
 GEMINI_API_KEY=AIzaSyCzZMli_Q6urMYt3D0jAp48zOqLk7Ry_Bo
-
-# Model configuration
 GEMINI_MODEL=gemini-1.5-flash
 MAX_RETRIES=3
