--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,7 +3,11 @@
 
 # Testing
 pytest>=7.0.0
+pytest-asyncio>=0.21.0
 pytest-cov>=4.0.0
+pytest-mock>=3.10.0
+httpx>=0.24.0
+
 # Type checking
 mypy>=1.0.0
 
@@ -13,4 +17,4 @@ isort>=5.0.0
 
 # Linting
 flake8>=6.0.0
-
+ruff>=0.1.0
