--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ click>=8.0.0
 pydantic>=2.0.0
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.0.0
+httpx>=0.24.0
+requests>=2.31.0
